--- a/public/index.html
+++ b/public/index.html
@@ -9,43 +9,14 @@
   </head>
   <body>
 
-<form onsubmit="return enterName();">
-  <input id="name" placeholder="Enter name">
-  <input type="submit">
-</form>
+<button onclick="start()">Start</button>
  
-<ul id="users"></ul>
+<p id="demo"></p>
+
+   <video id="videoElement" autoplay="true" width="60" height="80"></video>
+
      
-<script>
-  
-  var io = io();
- 
-  function enterName() {
-        // get username
-        var name = document.getElementById("name").value;
- 
-        // send it to server
-        io.emit("user_connected", name);
- 
-        // save my name in global variable
-        sender = name;
- 
-        // prevent the form from submitting
-        return false;
-    }
-
-  io.on("user_connected", function (username) {
-        var html = "";
-        html += "<li><button onclick='onUserSelected(this.innerHTML);'>" + username + "</button></li>";
- 
-        document.getElementById("users").innerHTML += html;
-    });
-
-    function onUserSelected(username) {
-        // save selected user in global variable
-        receiver = username;
-      }
-
-</script>
+<script src="script.js"></script>
+    
   </body>
 </html>
